parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> assignment
Rule 5     statement -> if_statement
Rule 6     statement -> for_loop
Rule 7     statement -> while_loop
Rule 8     statement -> function_declaration
Rule 9     statement -> expression_statement
Rule 10    block -> statement_list
Rule 11    expression_statement -> expression opt_semi
Rule 12    opt_semi -> SEMI
Rule 13    opt_semi -> empty
Rule 14    empty -> <empty>
Rule 15    assignment -> ID ASSIGN expression SEMI
Rule 16    assignment -> ID ASSIGN expression
Rule 17    statement -> SEMI
Rule 18    if_statement -> IF expression block END
Rule 19    if_statement -> IF expression block ELSE block END
Rule 20    if_statement -> IF expression block elseif_list END
Rule 21    if_statement -> IF expression block elseif_list ELSE block END
Rule 22    elseif_list -> elseif_list elseif_clause
Rule 23    elseif_list -> elseif_clause
Rule 24    elseif_clause -> ELSEIF expression block
Rule 25    for_loop -> FOR ID ASSIGN expression block END
Rule 26    while_loop -> WHILE expression block END
Rule 27    function_declaration -> FUNCTION return_vars ASSIGN ID LPAREN arg_list RPAREN block END
Rule 28    function_declaration -> FUNCTION ID LPAREN arg_list RPAREN block END
Rule 29    return_vars -> ID
Rule 30    return_vars -> LBRACKET id_list RBRACKET
Rule 31    id_list -> ID
Rule 32    id_list -> id_list COMMA ID
Rule 33    arg_list -> <empty>
Rule 34    arg_list -> arguments
Rule 35    arguments -> expression
Rule 36    arguments -> arguments COMMA expression
Rule 37    expression -> colon_expr
Rule 38    colon_expr -> colon_expr COLON colon_expr
Rule 39    colon_expr -> short_or
Rule 40    short_or -> short_or OROR short_and
Rule 41    short_or -> short_and
Rule 42    short_and -> short_and ANDAND logical_or
Rule 43    short_and -> logical_or
Rule 44    logical_or -> logical_or OR logical_and
Rule 45    logical_or -> logical_and
Rule 46    logical_and -> logical_and AND relation
Rule 47    logical_and -> relation
Rule 48    relation -> relation EQ relation
Rule 49    relation -> relation NEQ relation
Rule 50    relation -> relation LT relation
Rule 51    relation -> relation LE relation
Rule 52    relation -> relation GT relation
Rule 53    relation -> relation GE relation
Rule 54    relation -> additive
Rule 55    additive -> additive PLUS additive
Rule 56    additive -> additive MINUS additive
Rule 57    additive -> multiplicative
Rule 58    multiplicative -> multiplicative MUL multiplicative
Rule 59    multiplicative -> multiplicative DOTMUL multiplicative
Rule 60    multiplicative -> multiplicative DIV multiplicative
Rule 61    multiplicative -> multiplicative DOTDIV multiplicative
Rule 62    multiplicative -> power
Rule 63    power -> power POW power
Rule 64    power -> power DOTPOW power
Rule 65    power -> unary
Rule 66    unary -> MINUS unary
Rule 67    unary -> NOT unary
Rule 68    unary -> postfix
Rule 69    postfix -> postfix TRANSPOSE
Rule 70    postfix -> primary
Rule 71    primary -> ID
Rule 72    primary -> NUMBER
Rule 73    primary -> STRING
Rule 74    primary -> LPAREN expression RPAREN
Rule 75    primary -> matrix
Rule 76    matrix -> LBRACKET RBRACKET
Rule 77    matrix -> LBRACKET row_list RBRACKET
Rule 78    row_list -> row
Rule 79    row_list -> row_list SEMI row
Rule 80    row -> expression_list
Rule 81    expression_list -> expression
Rule 82    expression_list -> expression_list COMMA expression

Terminals, with rules where they appear

AND                  : 46
ANDAND               : 42
ASSIGN               : 15 16 25 27
COLON                : 38
COMMA                : 32 36 82
DIV                  : 60
DOTDIV               : 61
DOTMUL               : 59
DOTPOW               : 64
ELSE                 : 19 21
ELSEIF               : 24
END                  : 18 19 20 21 25 26 27 28
EQ                   : 48
FOR                  : 25
FUNCTION             : 27 28
GE                   : 53
GT                   : 52
ID                   : 15 16 25 27 28 29 31 32 71
IF                   : 18 19 20 21
LBRACKET             : 30 76 77
LE                   : 51
LPAREN               : 27 28 74
LT                   : 50
MINUS                : 56 66
MUL                  : 58
NEQ                  : 49
NOT                  : 67
NUMBER               : 72
OR                   : 44
OROR                 : 40
PLUS                 : 55
POW                  : 63
RBRACKET             : 30 76 77
RPAREN               : 27 28 74
SEMI                 : 12 15 17 79
STRING               : 73
TRANSPOSE            : 69
WHILE                : 26
error                : 

Nonterminals, with rules where they appear

additive             : 54 55 55 56 56
arg_list             : 27 28
arguments            : 34 36
assignment           : 4
block                : 18 19 19 20 21 21 24 25 26 27 28
colon_expr           : 37 38 38
elseif_clause        : 22 23
elseif_list          : 20 21 22
empty                : 13
expression           : 11 15 16 18 19 20 21 24 25 26 35 36 74 81 82
expression_list      : 80 82
expression_statement : 9
for_loop             : 6
function_declaration : 8
id_list              : 30 32
if_statement         : 5
logical_and          : 44 45 46
logical_or           : 42 43 44
matrix               : 75
multiplicative       : 57 58 58 59 59 60 60 61 61
opt_semi             : 11
postfix              : 68 69
power                : 62 63 63 64 64
primary              : 70
program              : 0
relation             : 46 47 48 48 49 49 50 50 51 51 52 52 53 53
return_vars          : 27
row                  : 78 79
row_list             : 77 79
short_and            : 40 41 42
short_or             : 39 40
statement            : 2 3
statement_list       : 1 3 10
unary                : 65 66 67
while_loop           : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . assignment
    (5) statement -> . if_statement
    (6) statement -> . for_loop
    (7) statement -> . while_loop
    (8) statement -> . function_declaration
    (9) statement -> . expression_statement
    (17) statement -> . SEMI
    (15) assignment -> . ID ASSIGN expression SEMI
    (16) assignment -> . ID ASSIGN expression
    (18) if_statement -> . IF expression block END
    (19) if_statement -> . IF expression block ELSE block END
    (20) if_statement -> . IF expression block elseif_list END
    (21) if_statement -> . IF expression block elseif_list ELSE block END
    (25) for_loop -> . FOR ID ASSIGN expression block END
    (26) while_loop -> . WHILE expression block END
    (27) function_declaration -> . FUNCTION return_vars ASSIGN ID LPAREN arg_list RPAREN block END
    (28) function_declaration -> . FUNCTION ID LPAREN arg_list RPAREN block END
    (11) expression_statement -> . expression opt_semi
    (37) expression -> . colon_expr
    (38) colon_expr -> . colon_expr COLON colon_expr
    (39) colon_expr -> . short_or
    (40) short_or -> . short_or OROR short_and
    (41) short_or -> . short_and
    (42) short_and -> . short_and ANDAND logical_or
    (43) short_and -> . logical_or
    (44) logical_or -> . logical_or OR logical_and
    (45) logical_or -> . logical_and
    (46) logical_and -> . logical_and AND relation
    (47) logical_and -> . relation
    (48) relation -> . relation EQ relation
    (49) relation -> . relation NEQ relation
    (50) relation -> . relation LT relation
    (51) relation -> . relation LE relation
    (52) relation -> . relation GT relation
    (53) relation -> . relation GE relation
    (54) relation -> . additive
    (55) additive -> . additive PLUS additive
    (56) additive -> . additive MINUS additive
    (57) additive -> . multiplicative
    (58) multiplicative -> . multiplicative MUL multiplicative
    (59) multiplicative -> . multiplicative DOTMUL multiplicative
    (60) multiplicative -> . multiplicative DIV multiplicative
    (61) multiplicative -> . multiplicative DOTDIV multiplicative
    (62) multiplicative -> . power
    (63) power -> . power POW power
    (64) power -> . power DOTPOW power
    (65) power -> . unary
    (66) unary -> . MINUS unary
    (67) unary -> . NOT unary
    (68) unary -> . postfix
    (69) postfix -> . postfix TRANSPOSE
    (70) postfix -> . primary
    (71) primary -> . ID
    (72) primary -> . NUMBER
    (73) primary -> . STRING
    (74) primary -> . LPAREN expression RPAREN
    (75) primary -> . matrix
    (76) matrix -> . LBRACKET RBRACKET
    (77) matrix -> . LBRACKET row_list RBRACKET

    SEMI            shift and go to state 10
    ID              shift and go to state 11
    IF              shift and go to state 13
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    FUNCTION        shift and go to state 16
    MINUS           shift and go to state 25
    NOT             shift and go to state 29
    NUMBER          shift and go to state 32
    STRING          shift and go to state 33
    LPAREN          shift and go to state 17
    LBRACKET        shift and go to state 35

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    if_statement                   shift and go to state 5
    for_loop                       shift and go to state 6
    while_loop                     shift and go to state 7
    function_declaration           shift and go to state 8
    expression_statement           shift and go to state 9
    expression                     shift and go to state 12
    colon_expr                     shift and go to state 18
    short_or                       shift and go to state 19
    short_and                      shift and go to state 20
    logical_or                     shift and go to state 21
    logical_and                    shift and go to state 22
    relation                       shift and go to state 23
    additive                       shift and go to state 24
    multiplicative                 shift and go to state 26
    power                          shift and go to state 27
    unary                          shift and go to state 28
    postfix                        shift and go to state 30
    primary                        shift and go to state 31
    matrix                         shift and go to state 34

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (4) statement -> . assignment
    (5) statement -> . if_statement
    (6) statement -> . for_loop
    (7) statement -> . while_loop
    (8) statement -> . function_declaration
    (9) statement -> . expression_statement
    (17) statement -> . SEMI
    (15) assignment -> . ID ASSIGN expression SEMI
    (16) assignment -> . ID ASSIGN expression
    (18) if_statement -> . IF expression block END
    (19) if_statement -> . IF expression block ELSE block END
    (20) if_statement -> . IF expression block elseif_list END
    (21) if_statement -> . IF expression block elseif_list ELSE block END
    (25) for_loop -> . FOR ID ASSIGN expression block END
    (26) while_loop -> . WHILE expression block END
    (27) function_declaration -> . FUNCTION return_vars ASSIGN ID LPAREN arg_list RPAREN block END
    (28) function_declaration -> . FUNCTION ID LPAREN arg_list RPAREN block END
    (11) expression_statement -> . expression opt_semi
    (37) expression -> . colon_expr
    (38) colon_expr -> . colon_expr COLON colon_expr
    (39) colon_expr -> . short_or
    (40) short_or -> . short_or OROR short_and
    (41) short_or -> . short_and
    (42) short_and -> . short_and ANDAND logical_or
    (43) short_and -> . logical_or
    (44) logical_or -> . logical_or OR logical_and
    (45) logical_or -> . logical_and
    (46) logical_and -> . logical_and AND relation
    (47) logical_and -> . relation
    (48) relation -> . relation EQ relation
    (49) relation -> . relation NEQ relation
    (50) relation -> . relation LT relation
    (51) relation -> . relation LE relation
    (52) relation -> . relation GT relation
    (53) relation -> . relation GE relation
    (54) relation -> . additive
    (55) additive -> . additive PLUS additive
    (56) additive -> . additive MINUS additive
    (57) additive -> . multiplicative
    (58) multiplicative -> . multiplicative MUL multiplicative
    (59) multiplicative -> . multiplicative DOTMUL multiplicative
    (60) multiplicative -> . multiplicative DIV multiplicative
    (61) multiplicative -> . multiplicative DOTDIV multiplicative
    (62) multiplicative -> . power
    (63) power -> . power POW power
    (64) power -> . power DOTPOW power
    (65) power -> . unary
    (66) unary -> . MINUS unary
    (67) unary -> . NOT unary
    (68) unary -> . postfix
    (69) postfix -> . postfix TRANSPOSE
    (70) postfix -> . primary
    (71) primary -> . ID
    (72) primary -> . NUMBER
    (73) primary -> . STRING
    (74) primary -> . LPAREN expression RPAREN
    (75) primary -> . matrix
    (76) matrix -> . LBRACKET RBRACKET
    (77) matrix -> . LBRACKET row_list RBRACKET

    $end            reduce using rule 1 (program -> statement_list .)
    SEMI            shift and go to state 10
    ID              shift and go to state 11
    IF              shift and go to state 13
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    FUNCTION        shift and go to state 16
    MINUS           shift and go to state 25
    NOT             shift and go to state 29
    NUMBER          shift and go to state 32
    STRING          shift and go to state 33
    LPAREN          shift and go to state 17
    LBRACKET        shift and go to state 35

    statement                      shift and go to state 36
    assignment                     shift and go to state 4
    if_statement                   shift and go to state 5
    for_loop                       shift and go to state 6
    while_loop                     shift and go to state 7
    function_declaration           shift and go to state 8
    expression_statement           shift and go to state 9
    expression                     shift and go to state 12
    colon_expr                     shift and go to state 18
    short_or                       shift and go to state 19
    short_and                      shift and go to state 20
    logical_or                     shift and go to state 21
    logical_and                    shift and go to state 22
    relation                       shift and go to state 23
    additive                       shift and go to state 24
    multiplicative                 shift and go to state 26
    power                          shift and go to state 27
    unary                          shift and go to state 28
    postfix                        shift and go to state 30
    primary                        shift and go to state 31
    matrix                         shift and go to state 34

state 3

    (2) statement_list -> statement .

    SEMI            reduce using rule 2 (statement_list -> statement .)
    ID              reduce using rule 2 (statement_list -> statement .)
    IF              reduce using rule 2 (statement_list -> statement .)
    FOR             reduce using rule 2 (statement_list -> statement .)
    WHILE           reduce using rule 2 (statement_list -> statement .)
    FUNCTION        reduce using rule 2 (statement_list -> statement .)
    MINUS           reduce using rule 2 (statement_list -> statement .)
    NOT             reduce using rule 2 (statement_list -> statement .)
    NUMBER          reduce using rule 2 (statement_list -> statement .)
    STRING          reduce using rule 2 (statement_list -> statement .)
    LPAREN          reduce using rule 2 (statement_list -> statement .)
    LBRACKET        reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)
    END             reduce using rule 2 (statement_list -> statement .)
    ELSE            reduce using rule 2 (statement_list -> statement .)
    ELSEIF          reduce using rule 2 (statement_list -> statement .)


state 4

    (4) statement -> assignment .

    SEMI            reduce using rule 4 (statement -> assignment .)
    ID              reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    FOR             reduce using rule 4 (statement -> assignment .)
    WHILE           reduce using rule 4 (statement -> assignment .)
    FUNCTION        reduce using rule 4 (statement -> assignment .)
    MINUS           reduce using rule 4 (statement -> assignment .)
    NOT             reduce using rule 4 (statement -> assignment .)
    NUMBER          reduce using rule 4 (statement -> assignment .)
    STRING          reduce using rule 4 (statement -> assignment .)
    LPAREN          reduce using rule 4 (statement -> assignment .)
    LBRACKET        reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    END             reduce using rule 4 (statement -> assignment .)
    ELSE            reduce using rule 4 (statement -> assignment .)
    ELSEIF          reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> if_statement .

    SEMI            reduce using rule 5 (statement -> if_statement .)
    ID              reduce using rule 5 (statement -> if_statement .)
    IF              reduce using rule 5 (statement -> if_statement .)
    FOR             reduce using rule 5 (statement -> if_statement .)
    WHILE           reduce using rule 5 (statement -> if_statement .)
    FUNCTION        reduce using rule 5 (statement -> if_statement .)
    MINUS           reduce using rule 5 (statement -> if_statement .)
    NOT             reduce using rule 5 (statement -> if_statement .)
    NUMBER          reduce using rule 5 (statement -> if_statement .)
    STRING          reduce using rule 5 (statement -> if_statement .)
    LPAREN          reduce using rule 5 (statement -> if_statement .)
    LBRACKET        reduce using rule 5 (statement -> if_statement .)
    $end            reduce using rule 5 (statement -> if_statement .)
    END             reduce using rule 5 (statement -> if_statement .)
    ELSE            reduce using rule 5 (statement -> if_statement .)
    ELSEIF          reduce using rule 5 (statement -> if_statement .)


state 6

    (6) statement -> for_loop .

    SEMI            reduce using rule 6 (statement -> for_loop .)
    ID              reduce using rule 6 (statement -> for_loop .)
    IF              reduce using rule 6 (statement -> for_loop .)
    FOR             reduce using rule 6 (statement -> for_loop .)
    WHILE           reduce using rule 6 (statement -> for_loop .)
    FUNCTION        reduce using rule 6 (statement -> for_loop .)
    MINUS           reduce using rule 6 (statement -> for_loop .)
    NOT             reduce using rule 6 (statement -> for_loop .)
    NUMBER          reduce using rule 6 (statement -> for_loop .)
    STRING          reduce using rule 6 (statement -> for_loop .)
    LPAREN          reduce using rule 6 (statement -> for_loop .)
    LBRACKET        reduce using rule 6 (statement -> for_loop .)
    $end            reduce using rule 6 (statement -> for_loop .)
    END             reduce using rule 6 (statement -> for_loop .)
    ELSE            reduce using rule 6 (statement -> for_loop .)
    ELSEIF          reduce using rule 6 (statement -> for_loop .)


state 7

    (7) statement -> while_loop .

    SEMI            reduce using rule 7 (statement -> while_loop .)
    ID              reduce using rule 7 (statement -> while_loop .)
    IF              reduce using rule 7 (statement -> while_loop .)
    FOR             reduce using rule 7 (statement -> while_loop .)
    WHILE           reduce using rule 7 (statement -> while_loop .)
    FUNCTION        reduce using rule 7 (statement -> while_loop .)
    MINUS           reduce using rule 7 (statement -> while_loop .)
    NOT             reduce using rule 7 (statement -> while_loop .)
    NUMBER          reduce using rule 7 (statement -> while_loop .)
    STRING          reduce using rule 7 (statement -> while_loop .)
    LPAREN          reduce using rule 7 (statement -> while_loop .)
    LBRACKET        reduce using rule 7 (statement -> while_loop .)
    $end            reduce using rule 7 (statement -> while_loop .)
    END             reduce using rule 7 (statement -> while_loop .)
    ELSE            reduce using rule 7 (statement -> while_loop .)
    ELSEIF          reduce using rule 7 (statement -> while_loop .)


state 8

    (8) statement -> function_declaration .

    SEMI            reduce using rule 8 (statement -> function_declaration .)
    ID              reduce using rule 8 (statement -> function_declaration .)
    IF              reduce using rule 8 (statement -> function_declaration .)
    FOR             reduce using rule 8 (statement -> function_declaration .)
    WHILE           reduce using rule 8 (statement -> function_declaration .)
    FUNCTION        reduce using rule 8 (statement -> function_declaration .)
    MINUS           reduce using rule 8 (statement -> function_declaration .)
    NOT             reduce using rule 8 (statement -> function_declaration .)
    NUMBER          reduce using rule 8 (statement -> function_declaration .)
    STRING          reduce using rule 8 (statement -> function_declaration .)
    LPAREN          reduce using rule 8 (statement -> function_declaration .)
    LBRACKET        reduce using rule 8 (statement -> function_declaration .)
    $end            reduce using rule 8 (statement -> function_declaration .)
    END             reduce using rule 8 (statement -> function_declaration .)
    ELSE            reduce using rule 8 (statement -> function_declaration .)
    ELSEIF          reduce using rule 8 (statement -> function_declaration .)


state 9

    (9) statement -> expression_statement .

    SEMI            reduce using rule 9 (statement -> expression_statement .)
    ID              reduce using rule 9 (statement -> expression_statement .)
    IF              reduce using rule 9 (statement -> expression_statement .)
    FOR             reduce using rule 9 (statement -> expression_statement .)
    WHILE           reduce using rule 9 (statement -> expression_statement .)
    FUNCTION        reduce using rule 9 (statement -> expression_statement .)
    MINUS           reduce using rule 9 (statement -> expression_statement .)
    NOT             reduce using rule 9 (statement -> expression_statement .)
    NUMBER          reduce using rule 9 (statement -> expression_statement .)
    STRING          reduce using rule 9 (statement -> expression_statement .)
    LPAREN          reduce using rule 9 (statement -> expression_statement .)
    LBRACKET        reduce using rule 9 (statement -> expression_statement .)
    $end            reduce using rule 9 (statement -> expression_statement .)
    END             reduce using rule 9 (statement -> expression_statement .)
    ELSE            reduce using rule 9 (statement -> expression_statement .)
    ELSEIF          reduce using rule 9 (statement -> expression_statement .)


state 10

    (17) statement -> SEMI .

    SEMI            reduce using rule 17 (statement -> SEMI .)
    ID              reduce using rule 17 (statement -> SEMI .)
    IF              reduce using rule 17 (statement -> SEMI .)
    FOR             reduce using rule 17 (statement -> SEMI .)
    WHILE           reduce using rule 17 (statement -> SEMI .)
    FUNCTION        reduce using rule 17 (statement -> SEMI .)
    MINUS           reduce using rule 17 (statement -> SEMI .)
    NOT             reduce using rule 17 (statement -> SEMI .)
    NUMBER          reduce using rule 17 (statement -> SEMI .)
    STRING          reduce using rule 17 (statement -> SEMI .)
    LPAREN          reduce using rule 17 (statement -> SEMI .)
    LBRACKET        reduce using rule 17 (statement -> SEMI .)
    $end            reduce using rule 17 (statement -> SEMI .)
    END             reduce using rule 17 (statement -> SEMI .)
    ELSE            reduce using rule 17 (statement -> SEMI .)
    ELSEIF          reduce using rule 17 (statement -> SEMI .)


state 11

    (15) assignment -> ID . ASSIGN expression SEMI
    (16) assignment -> ID . ASSIGN expression
    (71) primary -> ID .

    ASSIGN          shift and go to state 37
    TRANSPOSE       reduce using rule 71 (primary -> ID .)
    POW             reduce using rule 71 (primary -> ID .)
    DOTPOW          reduce using rule 71 (primary -> ID .)
    MUL             reduce using rule 71 (primary -> ID .)
    DOTMUL          reduce using rule 71 (primary -> ID .)
    DIV             reduce using rule 71 (primary -> ID .)
    DOTDIV          reduce using rule 71 (primary -> ID .)
    PLUS            reduce using rule 71 (primary -> ID .)
    MINUS           reduce using rule 71 (primary -> ID .)
    EQ              reduce using rule 71 (primary -> ID .)
    NEQ             reduce using rule 71 (primary -> ID .)
    LT              reduce using rule 71 (primary -> ID .)
    LE              reduce using rule 71 (primary -> ID .)
    GT              reduce using rule 71 (primary -> ID .)
    GE              reduce using rule 71 (primary -> ID .)
    AND             reduce using rule 71 (primary -> ID .)
    OR              reduce using rule 71 (primary -> ID .)
    ANDAND          reduce using rule 71 (primary -> ID .)
    OROR            reduce using rule 71 (primary -> ID .)
    COLON           reduce using rule 71 (primary -> ID .)
    SEMI            reduce using rule 71 (primary -> ID .)
    ID              reduce using rule 71 (primary -> ID .)
    IF              reduce using rule 71 (primary -> ID .)
    FOR             reduce using rule 71 (primary -> ID .)
    WHILE           reduce using rule 71 (primary -> ID .)
    FUNCTION        reduce using rule 71 (primary -> ID .)
    NOT             reduce using rule 71 (primary -> ID .)
    NUMBER          reduce using rule 71 (primary -> ID .)
    STRING          reduce using rule 71 (primary -> ID .)
    LPAREN          reduce using rule 71 (primary -> ID .)
    LBRACKET        reduce using rule 71 (primary -> ID .)
    $end            reduce using rule 71 (primary -> ID .)
    END             reduce using rule 71 (primary -> ID .)
    ELSE            reduce using rule 71 (primary -> ID .)
    ELSEIF          reduce using rule 71 (primary -> ID .)


state 12

    (11) expression_statement -> expression . opt_semi
    (12) opt_semi -> . SEMI
    (13) opt_semi -> . empty
    (14) empty -> .

  ! shift/reduce conflict for SEMI resolved as shift
    SEMI            shift and go to state 39
    ID              reduce using rule 14 (empty -> .)
    IF              reduce using rule 14 (empty -> .)
    FOR             reduce using rule 14 (empty -> .)
    WHILE           reduce using rule 14 (empty -> .)
    FUNCTION        reduce using rule 14 (empty -> .)
    MINUS           reduce using rule 14 (empty -> .)
    NOT             reduce using rule 14 (empty -> .)
    NUMBER          reduce using rule 14 (empty -> .)
    STRING          reduce using rule 14 (empty -> .)
    LPAREN          reduce using rule 14 (empty -> .)
    LBRACKET        reduce using rule 14 (empty -> .)
    $end            reduce using rule 14 (empty -> .)
    END             reduce using rule 14 (empty -> .)
    ELSE            reduce using rule 14 (empty -> .)
    ELSEIF          reduce using rule 14 (empty -> .)

  ! SEMI            [ reduce using rule 14 (empty -> .) ]

    opt_semi                       shift and go to state 38
    empty                          shift and go to state 40

state 13
